@@ -13,16 +13,20 @@ class FetcherTests(unittest.TestCase):
         from compoze.fetcher import Fetcher
         return Fetcher
 
-    def _makeOne(self, *args, **kw):
+    def _makeOptions(self, path='.', default_verbose=False, *args, **kw):
         from optparse import Values
-        logger = kw.pop('logger', None)
         default = kw.copy()
-        default.setdefault('verbose', False)
+        default.setdefault('verbose', default_verbose)
         values = Values(default)
-        values.path = '.'
+        values.path = path
+        return values
+
+    def _makeOne(self, *args, **kw):
+        options = self._makeOptions('.', False, *args, **kw)
+        logger = kw.pop('logger', None)
         if logger is not None:
-            return self._getTargetClass()(values, logger=logger, *args)
-        return self._getTargetClass()(values, *args)
+            return self._getTargetClass()(options, logger=logger, *args)
+        return self._getTargetClass()(options, *args)
 
     def _makeTempDir(self):
         import tempfile
@@ -44,55 +48,67 @@ class FetcherTests(unittest.TestCase):
                 dict([(x, DummyDistribution(x.project_name, target))
                             for x in rqmts]))
 
-    def test_ctor_empty_argv_raises(self):
-        self.assertRaises(ValueError, self._makeOne, argv=[])
+    def test_ctor_defaults(self):
+        import os
+        fetcher = self._makeOne()
+        path = os.path.abspath(os.path.expanduser('.'))
+        self.assertEqual(fetcher.path, path)
+        self.assertEqual(fetcher.options.index_urls,
+                         ['http://pypi.python.org/simple'])
+        self.assertEqual(fetcher.options.find_links, [])
+        self.failIf(fetcher.options.fetch_site_packages)
+        self.failUnless(fetcher.options.source_only)
+        self.failIf(fetcher.options.keep_tempdir)
 
-    def test_ctor_no_download_invalid_path_raises(self):
-        self.assertRaises(ValueError, self._makeOne,
-                          '--fetch-site-packages',
-                          '--path=%s' % __file__,
-                         )
+    def test_ctor_uses_global_options_as_default(self):
+        g_options = self._makeOptions(path='/tmp/foo',
+                                      verbose=True,
+                                      index_urls=['http://example.com/simple'],
+                                      find_links=['http://example.com/links'],
+                                      fetch_site_packages=True,
+                                      source_only=False,
+                                      keep_tempdir=True,
+                                     )
+        fetcher = self._getTargetClass()(g_options)
+        self.assertEqual(fetcher.path, '/tmp/foo')
+        self.assertEqual(fetcher.options.index_urls,
+                         ['http://example.com/simple'])
+        self.assertEqual(fetcher.options.find_links,
+                         ['http://example.com/links'])
+        self.failUnless(fetcher.options.fetch_site_packages)
+        self.failIf(fetcher.options.source_only)
+        self.failUnless(fetcher.options.keep_tempdir)
+
+    def test_ctor_invalid_path_doesnt_raise(self):
+        import os
+        path = os.path.abspath(os.path.expanduser(__file__))
+        fetcher = self._makeOne('--path=%s' % __file__)
+        self.assertEqual(fetcher.path, path)
 
     def test_ctor_valid_path_existing(self):
         path = self._makeTempDir()
-        fetcher = self._makeOne('--fetch-site-packages',
-                                '--path=%s' % path)
+        fetcher = self._makeOne('--path=%s' % path)
         self.assertEqual(fetcher.path, path)
 
-    def test_ctor_valid_path_non_existing_creates(self):
+    def test_ctor_valid_path_non_existing_doesnt_create(self):
         import os
         path = self._makeTempDir()
         target = os.path.join(path, 'target')
-        fetcher = self._makeOne('--fetch-site-packages',
-                                '--path=%s' % target)
-        self.failUnless(os.path.isdir(target))
+        fetcher = self._makeOne('--path=%s' % target)
         self.assertEqual(fetcher.path, target)
-
-    def test_ctor_default_index_url_is_cheeseshop(self):
-        fetcher = self._makeOne('--fetch-site-packages')
-        self.assertEqual(fetcher.options.index_urls,
-                         ['http://pypi.python.org/simple'])
-
-    def test_ctor_default_logger(self):
-        from compoze.fetcher import _print
-        fetcher = self._makeOne('--fetch-site-packages')
-        self.failUnless(fetcher._logger is _print)
-
-    def test_ctor_explicit_logger(self):
-        fetcher = self._makeOne('--fetch-site-packages', logger=self)
-        self.failUnless(fetcher._logger is self)
-
-    def test_ctor_index_factory(self):
-        from compoze.index import CompozePackageIndex
-        fetcher = self._makeOne('--fetch-site-packages')
-        self.failUnless(fetcher.index_factory is CompozePackageIndex)
+        self.failIf(os.path.isdir(target))
 
     def test_ctor_explicit_index_url(self):
-        fetcher = self._makeOne('--fetch-site-packages',
-                               '--index-url=http://dist.repoze.org/nonesuch',
-                              )
+        fetcher = self._makeOne('--index-url=http://example.com/simple',
+                               )
         self.assertEqual(fetcher.options.index_urls,
-                         ['http://dist.repoze.org/nonesuch'])
+                         ['http://example.com/simple'])
+
+    def test_ctor_find_links(self):
+        fetcher = self._makeOne('--find-links=http://example.com/links',
+                               )
+        self.assertEqual(fetcher.options.find_links,
+                         ['http://example.com/links'])
 
     def test_ctor_w_simple_requirement(self):
         fetcher = self._makeOne('compoze')
@@ -131,21 +147,66 @@ class FetcherTests(unittest.TestCase):
         self.assertEqual(fetcher.requirements[0].extras,
                          ('nonesuch', 'bother'))
 
+    def test_ctor_default_logger(self):
+        from compoze.fetcher import _print
+        fetcher = self._makeOne()
+        self.failUnless(fetcher._logger is _print)
+
+    def test_ctor_explicit_logger(self):
+        fetcher = self._makeOne(logger=self)
+        self.failUnless(fetcher._logger is self)
+
+    def test_ctor_index_factory(self):
+        from compoze.index import CompozePackageIndex
+        fetcher = self._makeOne()
+        self.failUnless(fetcher.index_factory is CompozePackageIndex)
+
     def test_blather_not_verbose(self):
         def _dont_go_here(*args):
             assert 0, args
-        fetcher = self._makeOne('--fetch-site-packages',
-                                 '--quiet',
-                                 logger=_dont_go_here)
+        fetcher = self._makeOne('--quiet', logger=_dont_go_here)
         fetcher.blather('foo') # doesn't assert
 
     def test_blather_verbose(self):
         logged = []
-        fetcher = self._makeOne('--fetch-site-packages',
-                                 '--verbose',
-                                 logger=logged.append)
+        fetcher = self._makeOne('--verbose', logger=logged.append)
         fetcher.blather('foo')
         self.assertEqual(logged, ['foo'])
+
+    def test_download_distributions_no_rqmts_or_fsp_raises(self):
+        fetcher = self._makeOne(argv=[])
+        self.assertRaises(ValueError, fetcher.download_distributions)
+
+    def test_download_distributions_invalid_path_raises(self):
+        fetcher = self._makeOne('--path=%s' % __file__, 'compoze')
+        self.assertRaises(ValueError, fetcher.download_distributions)
+
+    def test_download_distributes_valid_path_non_existing_creates(self):
+        import os
+        from pkg_resources import Requirement
+        root = self._makeTempDir()
+        target = os.path.join(root, 'target')
+        os.makedirs(target)
+        path = os.path.join(root, 'path')
+        self.failIf(os.path.isdir(path))
+        #os.makedirs(path) NOT!  we want download_distributions to make it.
+        rqmt = Requirement.parse('compoze')
+        cheeseshop = self._makeIndex(rqmt)
+        local = self._makeIndex(rqmt, target=target)
+        def _factory(index_url, search_path=None):
+            if index_url == 'http://pypi.python.org/simple':
+                assert search_path is None
+                return cheeseshop
+            if index_url ==  target:
+                assert search_path is ()
+                return local
+            raise ValueError(index_url)
+        fetcher = self._makeOne('--quiet', '--path=%s' % path, 'compoze')
+        self.failIf(os.path.isdir(path))
+        fetcher.index_factory = _factory
+        fetcher.tmpdir = target
+        fetcher.download_distributions()
+        self.failUnless(os.path.isdir(path))
 
     def test_download_distributions_no_find_links(self):
         import os
